夏家河疗养院---一张没有图片

--- a/tss_6.html
+++ b/tss_6.html
@@ -2,71 +2,76 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连铁路夏家河疗养院</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>大连铁路夏家河疗养院</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page tss6  tdc-detail">
+<div class="page tss6  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>大连铁路<br/>夏家河疗养院</h3>
-              
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>大连铁路<br/>夏家河疗养院</h3>
+
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">位于夏家河海滨浴场对面，是一个集健康理疗、休闲生活为一体的综合性疗养院。拥有13栋风格各异的五星级欧式别墅、3个高档宾馆、1个最多可同时容纳400人的大型会议中心、1个具备辽宁省、大连市和沈阳铁路局定点资格的精神心理康复分院。还有6789平方米的体育场、317平方米的训练靶场各1个，同时也是沈阳铁路公安局大连民警训练基地。
                 </span>
-              </p>
-            </div>
+                        </p>
+                    </div>
 
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none; height: 100%;">
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none; height: 100%;">
                             <div class="width-4-5" style=""> <!--左边60%-->
                                 <div class="height-1-4"> <!--左边上25%-->
-                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                    <div class="width-1-5" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss6/i1.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss6/i1.jpg" class="img-fullh"
                                                 style=""></a>
                                     </div>
-                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                    <div class="width-1-5" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss6/i6.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss6/i6.jpg" class="img-fullh"
                                                 style="width-1-4"></a>
                                     </div>
-                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                    <div class="width-1-5" style="padding:0 8px 8px 0;"> <!--左上3列-->
                                         <a href="images/tss6/i3.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss6/i3.jpg" class="img-fullh"
                                                 style="width-1-4"></a>
                                     </div>
-                                    <div class="width-1-4"  style="padding:0 8px 8px 0;">
+                                    <div class="width-1-5" style="padding:0 8px 8px 0;">
                                         <a href="images/tss6/i4.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss6/i4.jpg" class="img-fullh"
+                                                style="width-1-4 float: right;"></a>
+                                    </div>
+                                    <div class="width-1-5" style="padding:0 8px 8px 0;">
+                                        <a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss6/i5.jpg" class="img-fullh"
                                                 style="width-1-4 float: right;"></a>
                                     </div>
                                 </div>
@@ -79,96 +84,111 @@
 
                             <div class="width-1-5" style=""> <!--右边20%-->
                                 <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
-                                        <a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss6/i5.jpg" class="img-fullh"
-                                                style=" "></a>
+                                    <!--<a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss6/i5.jpg" class="img-fullh"-->
+                                            <!--style=" "></a>-->
+
+                                      <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+
                                 </div>
                                 <div class="height-1-4" style="padding:0;">  <!--右第一行-->
-                                        <a href="images/tss6/i9.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss6/i9.jpg" class="img-fullh"
-                                                style=" "></a>
+                                    <a href="images/tss6/i9.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/i9.jpg" class="img-fullh"
+                                            style=" "></a>
                                 </div>
                                 <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
-                                        <a href="images/tss6/i7.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss6/i7.jpg" class=" img-fullh"
-                                                style=""></a>
+                                    <a href="images/tss6/i7.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/i7.jpg" class=" img-fullh"
+                                            style=""></a>
                                 </div>
                                 <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
-                                        <a href="images/tss6/i8.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss6/i8.jpg" class="img-fullh"
-                                                style=""></a>
+                                    <a href="images/tss6/i8.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss6/i8.jpg" class="img-fullh"
+                                            style=""></a>
                                 </div>
                             </div>
-              </div>
+                        </div>
 
 
-              <div class="grid" style="display:none;">
-                <ul class="xul">
-                  <li><a href="images/tss6/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i3_s.png"> </a></li>
-                  <li><a href="images/tss6/i4.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i4_s.png"> </a></li>
-                  <li><a href="images/tss6/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i1_s.png"> </a></li>
-                  <li><a href="images/tss6/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i6_s.png"> </a></li>
-                  <li class="ximg2"><a href="images/tss6/i5.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i5_s.png"> </a></li>
-                  <a href="images/tss6/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss6/i2_s.png"> </a>
-                </ul>
-              </div>
+                        <div class="grid" style="display:none;">
+                            <ul class="xul">
+                                <li><a href="images/tss6/i3.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss6/i3_s.png"> </a></li>
+                                <li><a href="images/tss6/i4.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss6/i4_s.png"> </a></li>
+                                <li><a href="images/tss6/i1.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss6/i1_s.png"> </a></li>
+                                <li><a href="images/tss6/i6.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss6/i6_s.png"> </a></li>
+                                <li class="ximg2"><a href="images/tss6/i5.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss6/i5_s.png"> </a></li>
+                                <a href="images/tss6/i2.jpg" data-lightbox="lightbox"><img src="./images/tss6/i2_s.png">
+                                </a>
+                            </ul>
+                        </div>
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss6/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i9.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss6/i1.jpg">	</div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tss6/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss6/i1.jpg"></div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-              </div>
+
 
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tss/tss6.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tss/tss6.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
-    <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-      <source src="videos/大连夏家河子疗养院.webm" type="video/webm"/>
+    <video class="video-js vjs-hidden"
+           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+        <source src="videos/大连夏家河子疗养院.webm" type="video/webm"/>
     </video>
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
