--- a/tss_11.html
+++ b/tss_11.html
@@ -2,121 +2,174 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>出租公司</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>出租公司</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tss_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tss_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>出租车公司</h3>
-              
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>出租车公司</h3>
+
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">集团旗下的出租车公司拥有出租汽车118台，是大连市出租车行业中的明星企业。
                 </span>
-              </p>
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-
-
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="height:100%;display:none;">
-                <div class="width-1-2" style="padding: 0 5px 0  0;">
-                  <a href="images/tss11/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i6_s.jpg" class="img-fullh" style=""></a>
-                </div>
-                <div class="width-1-2" style="padding: 0  0  0 5px;">
-                  <div style="width:50%; height:50%;  padding: 0 5px 5px  0;float:left;overflow:hidden;">
-                    <a href="images/tss11/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i1.jpg" style="height:100%;width:auto;"></a>
-                  </div>
-                  <div style="width:50%; height:50%;  padding: 0 0 5px 5px;float:left;overflow:hidden;">
-                    <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>
-                  </div>
-                  <div style="width:50%; height:50%;  padding: 5px 5px 0 0;float:left;overflow:hidden;">
-                    <a href="images/tss11/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;"></a>
-                  </div>
-                  <div style="width:50%; height:50%;  padding: 5px 0 0 5px;float:left;overflow:hidden;">
-                    <a href="images/tss11/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>
-                  </div>
+                        </p>
+                    </div>
 
                 </div>
-              </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss11/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss11/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss11/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss11/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss11/i9.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss11/i1.jpg">	</div>
+
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="height:100%;display:none;">
+                            <div class="width-2-3" style="padding: 0 5px 0  0;">
+                                <a href="images/tss11/i6.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss11/i6_s.jpg" class="img-fullw" style=""></a>
+                            </div>
+                            <div class="width-1-3" style="padding: 0  0  0 5px;">
+
+                                <div class="width-1-2">
+                                    <div class="height-1-3">
+                                        <!--<a href="images/tss11/i1.jpg" data-lightbox="lightbox">-->
+                                            <!--<img src="./images/tss11/i1.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>-->
+                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
+                                            修改<br>比例
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <!--<a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;padding: 0 18px 8px 0"></a>-->
+                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
+                                            修改<br>比例
+                                        </div></span>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <!--<a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img-->
+                                        <!--src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>-->
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="width-1-2">
+                                    <div class="height-1-3">
+                                        <a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>
+
+                                    </div>
+                                    <div class="height-1-3">
+                                        <a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;padding-bottom: 8px;"></a>
+                                    </div>
+                                    <div class="height-1-3">
+                                        <!--<a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>-->
+                                          <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 95%; width: 95%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <!--<div style="width:50%; height:50%;  padding: 0 5px 5px  0;float:left;overflow:hidden;">-->
+                                    <!--<a href="images/tss11/i1.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss11/i1.jpg" style="height:100%;width:auto;"></a>-->
+                                <!--</div>-->
+                                <!--<div style="width:50%; height:50%;  padding: 0 0 5px 5px;float:left;overflow:hidden;">-->
+                                    <!--<a href="images/tss11/i3.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss11/i3_s.jpg" style="height:100%;width:auto;"></a>-->
+                                <!--</div>-->
+                                <!--<div style="width:50%; height:50%;  padding: 5px 5px 0 0;float:left;overflow:hidden;">-->
+                                    <!--<a href="images/tss11/i2.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss11/i2_s.jpg" style="height:100%;width:auto;"></a>-->
+                                <!--</div>-->
+                                <!--<div style="width:50%; height:50%;  padding: 5px 0 0 5px;float:left;overflow:hidden;">-->
+                                    <!--<a href="images/tss11/i9.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss11/i9_s.jpg" style="height:100%;width:auto;"></a>-->
+                                <!--</div>-->
+
+                            </div>
+                        </div>
+
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tss11/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss11/i1.jpg"></div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-              </div>
-
             </div>
-          </div>
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tss/出租车公司.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tss/出租车公司.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
 
-    </div>
-    <script src="scripts/jquery-1.9.1.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-    <script src="scripts/swiper.jquery.min.js"></script>
-    <script src="scripts/swiper.animate.min.js"></script>
-    <script src="scripts/video.js"></script>
-    <script src="scripts/lightbox.min.js"></script>
-    <script src="scripts/typing-animate.js"></script>
-    <script src="scripts/app.js"></script>
-  </body>
-  </html>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
+</body>
+</html>
