车站商服---5张没有照片

--- a/tss_9.html
+++ b/tss_9.html
@@ -2,120 +2,196 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>车站商服</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>车站商服</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tss_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tss_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>车站商服</h3>
-              
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>车站商服</h3>
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">
 				依托铁路车站优势，在大连站、大连北站以及哈大、丹大沿线各高铁车站开发2万余平方米站车商网，经营范围涵盖了餐饮业、食品零售业、船票、旅行服务类、旅游咨询类等方面。与大商集团、肯德基、城际之星、灵芝妹子等知名企业建立了长期合作关系。</span>
-                </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none; height:100%;">
-                <div class="row-1-2-left" style="">
-                    <a href="images/tss9/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_03.png" class="" style="width: 100%; height: 100%;"></a>
-                </div>
-
-                <div class="row-1-2-right" style="">
-                  <div class="col-1-2-top" style="">
-                       <a href="images/tss9/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_06.png"class="" style="width: 100%;  height: 100%"></a>
-                   </div>
-
-                  <div class="col-1-2-bottom" style="">
-                    <div class="row-1-2-left" style="">
-                      <a href="images/tss9/i10.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_10.png" class="" style="width: 100%;  height: 100%"></a>
+                            </span>
+                        </p>
                     </div>
-                    <div  class="row-1-2-right" style="">
-                      <a href="images/tss9/i12.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_12.png" class="" style="width: 100%;  height: 100%"></a>
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
                     </div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss9/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/i10.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/i12.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss9/i3.jpg">	</div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none; height:100%;">
+
+                            <div class="width-4-5" style=""> <!--左边60%-->
+                                <div class="height-1-4"> <!--左边上25%-->
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss9/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss9/i3.jpg" class="img-fullh"
+                                                style=""></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss9/i12.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss9/i12.jpg" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss9/i10.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss9/i10.jpg" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;">
+                                        <!--<a href="images/tss9/i4.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tss9/i4.jpg" class="img-fullh"-->
+                                                <!--style="width-1-4 float: right;"></a>-->
+                                          <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="height-3-4" style="padding:0 8px 0 0;"> <!--左边下75%-->
+                                    <a href="images/tss9/i6.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss9/img9_06.png" class=""
+                                            style=" "></a>
+                                </div>
+                            </div>
+
+                            <div class="width-1-5" style=""> <!--右边20%-->
+                                <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
+                                    <!--<a href="images/tss9/i3.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss9/i3.jpg" class="img-fullh"-->
+                                            <!--style=" "></a>-->
+                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                </div>
+                                <div class="height-1-4" style="padding:0;">  <!--右第一行-->
+                                    <!--<a href="images/tss9/i8.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss9/i8.jpg" class="img-fullh"-->
+                                            <!--style=" "></a>-->
+                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                    <!--<a href="images/tss9/i9.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss9/i9.jpg" class=" img-fullh"-->
+                                            <!--style=""></a>-->
+                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                    <!--<a href="images/tss9/i7.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss9/i7.jpg" class="img-fullh"-->
+                                            <!--style=""></a>-->
+                                     <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                </div>
+                            </div>
+
+
+                            <!--<div class="row-1-2-left" style="">-->
+                            <!--<a href="images/tss9/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_03.png" class="" style="width: 100%; height: 100%;"></a>-->
+                            <!--</div>-->
+                            <!--<div class="row-1-2-right" style="">-->
+                            <!--<div class="col-1-2-top" style="">-->
+                            <!--<a href="images/tss9/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_06.png"class="" style="width: 100%;  height: 100%"></a>-->
+                            <!--</div>-->
+
+                            <!--<div class="col-1-2-bottom" style="">-->
+                            <!--<div class="row-1-2-left" style="">-->
+                            <!--<a href="images/tss9/i10.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_10.png" class="" style="width: 100%;  height: 100%"></a>-->
+                            <!--</div>-->
+                            <!--<div  class="row-1-2-right" style="">-->
+                            <!--<a href="images/tss9/i12.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_12.png" class="" style="width: 100%;  height: 100%"></a>-->
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--</div>-->
+
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tss9/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss9/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss9/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss9/i12.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss9/i3.jpg"></div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
 
-              </div>
+
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tss/车站商服.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tss/车站商服.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
 
-    </div>
-    <script src="scripts/jquery-1.9.1.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-    <script src="scripts/swiper.jquery.min.js"></script>
-    <script src="scripts/swiper.animate.min.js"></script>
-    <script src="scripts/video.js"></script>
-    <script src="scripts/lightbox.min.js"></script>
-    <script src="scripts/typing-animate.js"></script>
-    <script src="scripts/app.js"></script>
-  </body>
-  </html>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
+</body>
+</html>
