--- a/tdc_6.html
+++ b/tdc_6.html
@@ -2,124 +2,204 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>周水子钢材市场</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>周水子钢材市场</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>周水子<br/>钢材市场</h3>
-              
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>周水子<br/>钢材市场</h3>
+
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">位于大连市松江路55号的周水子钢材市场，是大连市最大、面积达17万平方米的钢材交易市场，市场内有专用线4条，龙门吊、汽车吊等装卸机具俱全，年货物周转量50万吨。周水子钢材市场凭借优质信誉及规范管理，一直保持大连钢材市场的领先地位。
 
                 </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class=" row-1-2-left">
-                                <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tdc6/i1.jpg" class="img-fullh"> </a>
-                            </div>
-                            <div class="row-1-2-right">
-                              <div class="col-1-2-top">
-                                <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tdc6/i2.jpg"> </a>
-                              </div>
-                              <div class="col-1-2-bottom">
-                                <div class=" row-1-2-left">
-                                    <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tdc6/i3.jpg"  class="img-fullh"> </a>
-                                </div>
-                                <div class="row-1-2-right">
-                                    <a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc6/i4.jpg" class="img-fullh"> </a>
-                                </div>
-                              </div>
 
+
+                            <div class="col2-60b-left">
+                                <!--<a href="images/tdc6/i5.jpg" data-lightbox="lightbox"><img-->
+                                <!--src="./images/tdc6/i5.jpg" class=""-->
+                                <!--style="height: 468px"></a>-->
+                                <div class="height-2-3">
+                                    <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
+                                    src="./images/tdc6/dimg_03-2.png" class=""
+                                    style="width:100%;padding-bottom: 8px;"></a>
+                                </div>
+                                <div class="height-1-3">
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="width-1-3">
+                                        <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col2-40b-right" style="padding: 0 0 0 8px;"> <!--右边40%-->
+                                <div class="height-1-3" style="padding: 0 0 8px 0">  <!--右第一行-->
+                                    <div class="row-1-2-left">
+                                        <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/i3.jpg" class="img-fullh"
+                                                style=" "></a>
+                                    </div>
+                                    <div class="row-1-2-right">
+                                        <!--<a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tdc6/i3.jpg" class="img-fullh"-->
+                                                <!--style=""></a>-->
+                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="height-1-3" style="padding: 8px 0">  <!--右第二行-->
+                                    <div class="row-1-2-left">
+                                        <!--<a href="images/tdc6/i6.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tdc6/i6.jpg" class="img-fullh"-->
+                                                <!--style=""></a>-->
+                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                    <div class="row-1-2-right">
+                                        <!--<a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tdc6/i2.jpg" class="img-fullh"-->
+                                                <!--style=""></a>-->
+                                         <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 100%;">
+                                            没有<br>图片
+                                        </div></span>
+                                    </div>
+                                </div>
+                                <div class="height-1-3" style="padding: 8px 0 0 0;">  <!--右第3行-->
+                                        <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc6/i1.jpg" class="img-fullw"
+                                                style=""></a>
+                                </div>
+                            </div>
+
+
+                            <!--<div class=" row-1-2-left">-->
+                                <!--<a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img-->
+                                        <!--src="./images/tdc6/i1.jpg" class="img-fullh"> </a>-->
+                            <!--</div>-->
+                            <!--<div class="row-1-2-right">-->
+                                <!--<div class="col-1-2-top">-->
+                                    <!--<a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tdc6/i2.jpg"> </a>-->
+                                <!--</div>-->
+                                <!--<div class="col-1-2-bottom">-->
+                                    <!--<div class=" row-1-2-left">-->
+                                        <!--<a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tdc6/i3.jpg" class="img-fullh"> </a>-->
+                                    <!--</div>-->
+                                    <!--<div class="row-1-2-right">-->
+                                        <!--<a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img-->
+                                                <!--src="./images/tdc6/i4.jpg" class="img-fullh"> </a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc6/i1.jpg"></div>
                             </div>
                         </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tdc6/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc6/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc6/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc6/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc6/i1.jpg">	</div>
+
+                    </div>
                 </div>
-              </div>
+
 
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tdc/周水子钢材市场2.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tdc/周水子钢材市场2.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
-        <!-- Modal -->
+    <!-- Modal -->
 
-    </div>
-    <script src="scripts/jquery-1.9.1.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-    <script src="scripts/swiper.jquery.min.js"></script>
-    <script src="scripts/swiper.animate.min.js"></script>
-    <script src="scripts/video.js"></script>
-    <script src="scripts/lightbox.min.js"></script>
-    <script src="scripts/typing-animate.js"></script>
-    <script src="scripts/app.js"></script>
-  </body>
-  </html>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
+</body>
+</html>
